--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,13 @@ jobs:
   test: 
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable' 
-    # Analyze our Dart code
-    - run: flutter analyze
-    # Run our tests
+        flutter-version: '1.7.8+hotfix.4'
+    - run: flutter doctor
+    - run: flutter pub get
     - run: flutter test
