--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: 'latest'
+        flutter-version: '1.20.4'
     - run: flutter doctor
     - run: flutter pub get
     - run: flutter test
