--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'master'
+        channel: 'dev'
     - run: flutter doctor
     - run: flutter pub get
     - run: flutter test
