--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,6 @@ jobs:
         channel: 'dev'
     - run: flutter doctor
     - run: flutter pub get
+    - run: pwd ; ls
+    - run: snap install tree && tree 
     - run: flutter test
